--- a/B0ToJpsiK0sPiPi.ipynb
+++ b/B0ToJpsiK0sPiPi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "76efe611-7e38-4a69-a568-9b3d20deb81f",
    "metadata": {},
    "outputs": [],
@@ -10,9 +10,13 @@
     "import os\n",
     "import uproot\n",
     "import vector\n",
+    "import particle \n",
+    "\n",
     "import awkward as ak\n",
     "import matplotlib.pylab as plt\n",
     "import numpy as np\n",
+    "\n",
+    "from hepunits.units import GeV\n",
     "\n",
     "vector.register_awkward()"
    ]
@@ -32,20 +36,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "fe5a8e57-1767-476f-a83f-63c4a1be2e78",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 1628M  100 1628M    0     0  6236k      0  0:04:27  0:04:27 --:--:-- 6892k\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "datafile_name = '0AB09F5D-121F-9443-87C8-3B69FAF1D99E.root'\n",
     "\n",
@@ -64,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a1a6c463-3a63-4363-adc1-2900ce2e37be",
    "metadata": {},
    "outputs": [],
@@ -74,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "a62c0fa2-a15b-4ed4-b1f8-f851c7407a07",
    "metadata": {
     "scrolled": true
@@ -95,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "dad8a695-e3e6-444f-bcee-c9bc7fb5f0c4",
    "metadata": {},
    "outputs": [],
@@ -113,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "0ce4fb93-d4b0-4c4a-9d4c-1b07c4bf281b",
    "metadata": {},
    "outputs": [
@@ -123,7 +117,7 @@
        "Text(0.5, 0, 'muon eta')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -163,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "e63b0b50-78f7-4d0d-b057-c11675cbf504",
    "metadata": {},
    "outputs": [],
@@ -187,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "8868a2c1-6830-45f6-ba0a-dc81f0f4980f",
    "metadata": {},
    "outputs": [],
@@ -209,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "cffa36ce-52ae-447e-b2b6-b5298dcefa79",
    "metadata": {},
    "outputs": [],
@@ -219,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "936edc91-0367-4968-a7c3-22826abcfd73",
    "metadata": {},
    "outputs": [
@@ -229,7 +223,7 @@
        "Text(0.5, 0, 'invariant mass [GeV]')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -272,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 12,
    "id": "762c0f67-1cbb-4a7c-a8d4-a02c326291d9",
    "metadata": {},
    "outputs": [],
@@ -285,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 13,
    "id": "cf8f7b57-6ad5-48f8-9cc1-bd901b199440",
    "metadata": {},
    "outputs": [],
@@ -295,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 14,
    "id": "7b29a5dd-d1c7-445f-921d-13a3a357cdf0",
    "metadata": {
     "scrolled": true
@@ -307,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 15,
    "id": "d58e8f86-7bad-4ada-bff4-fed24cebb05e",
    "metadata": {},
    "outputs": [],
@@ -317,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 16,
    "id": "e1b786dd-0e3e-4a35-9941-53d6161e3b4e",
    "metadata": {},
    "outputs": [
@@ -327,7 +321,7 @@
        "Text(0.5, 0, 'muon eta')"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -359,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 17,
    "id": "a671300b-9178-4b82-88f9-5984cb7fc023",
    "metadata": {},
    "outputs": [],
@@ -375,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 18,
    "id": "444249ba-c5e4-4473-96f9-e8e13de9c768",
    "metadata": {},
    "outputs": [],
@@ -389,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 19,
    "id": "2c26ac37-5d1b-4a21-a2fc-06dcc3f10db1",
    "metadata": {},
    "outputs": [],
@@ -399,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 20,
    "id": "4f9ae321-1e24-47c7-b652-4ee2046d5338",
    "metadata": {},
    "outputs": [
@@ -409,7 +403,7 @@
        "Text(0.5, 0, 'invariant mass [GeV]')"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -432,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 21,
    "id": "7799f8de-f944-470c-8390-9bcaab7ef163",
    "metadata": {},
    "outputs": [
@@ -468,7 +462,7 @@
        "<Array [[], [], [], ..., [], [211, 211, 211, -211]] type='50400 * var * int32'>"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 22,
    "id": "ba63a49e-fa20-4197-ba2e-57e5bef7561b",
    "metadata": {},
    "outputs": [],
@@ -498,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 23,
    "id": "2f8e6f52-5a5d-43e5-bd71-ac2545e82a15",
    "metadata": {},
    "outputs": [],
@@ -509,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 24,
    "id": "e03f55f1-7b09-46a6-9329-c0de9717965d",
    "metadata": {},
    "outputs": [],
@@ -521,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 25,
    "id": "4226f504-62cb-46d7-88c5-c3499cb81dd3",
    "metadata": {},
    "outputs": [
@@ -557,7 +551,7 @@
        "<Array [[-211, 211], [211, ...], ..., [211, -211]] type='1633 * var * int32'>"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,8 +562,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "id": "26377930-f2de-4fb4-b494-1d0b146dab31",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\pi^{+}$"
+      ],
+      "text/plain": [
+       "<Particle: name=\"pi+\", pdgid=211, mass=139.57039 ± 0.00018 MeV>"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "charged_pion = particle.Particle.from_pdgid(211)\n",
+    "charged_pion"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0ffcea65-f0c1-4e75-badb-fc4a36972471",
+   "id": "d849836d-d8d2-4e59-8aa1-2e480b3e9dca",
    "metadata": {},
    "outputs": [],
    "source": []
